--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/Spots.svg" alt="Sports Logo" class="header" />
+        <img src="./images/Spots.svg" alt="Sports Logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -32,17 +32,17 @@
               Senegalese-American singer, record producer, and entrepreneur. An
               influential figure in modern world
             </p>
-            <button class="profile__edit-btn">
+            <button type="button" class="profile__edit-btn">
               <img
-                src="./images/Group 2.svg"
+                src="./images/Group_2.svg"
                 alt="Edit_pencil"
                 class="profile__pencil"
               />Edit profile
             </button>
           </div>
-          <button class="profile__add-btn">
+          <button type="button" class="profile__add-btn">
             <img
-              src="./images/Group add.svg"
+              src="./images/Group_add.svg"
               alt="Plus icon"
               class="profile__add-icon"
             />New post
@@ -53,7 +53,7 @@
             <li class="card">
               <img
                 src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt=""
+                alt="1-photo-by-moritz-feldmann-from-pexels"
                 class="card-img"
               />
               <div class="card__content">
