--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
             <button type="button" class="profile__edit-btn">
               <img
-                src="./images/Group_2.svg"
+                src="./images/edit__pen.svg"
                 alt="Edit_pencil"
                 class="profile__pencil"
               />Edit profile
@@ -42,7 +42,7 @@
           </div>
           <button type="button" class="profile__add-btn">
             <img
-              src="./images/Group_add.svg"
+              src="./images/plus__icon.svg"
               alt="Plus icon"
               class="profile__add-icon"
             />New post
@@ -54,67 +54,67 @@
               <img
                 src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
                 alt="1-photo-by-moritz-feldmann-from-pexels"
-                class="card-img"
+                class="card__img"
               />
               <div class="card__content">
-                <p class="card__title">Val Thorens</p>
+                <h1 class="card__title">Val Thorens</h1>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/2-photo-by-ceiline-from-pexels.jpg"
-                alt=""
-                class="card-img"
+                alt="2-photo-by-ceiline-from-pexels"
+                class="card__img"
               />
               <div class="card__content">
-                <p class="card__title">Restaurant terrace</p>
+                <h2 class="card__title">Restaurant terrace</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
-                alt=""
-                class="card-img"
+                alt="3-photo-by-tubanur-dogan-from-pexels"
+                class="card__img"
               />
               <div class="card__content">
-                <p class="card__title">An outdoor cafe</p>
+                <h2 class="card__title">An outdoor cafe</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
-                alt=""
-                class="card-img"
+                alt="4-photo-by-maurice-laschet-from-pexels"
+                class="card__img"
               />
               <div class="card__content">
-                <p class="card__title">
+                <h2 class="card__title">
                   A very long bridge, over the forest...
-                </p>
+                </h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
-                alt=""
-                class="card-img"
+                alt="5-photo-by-van-anh-nguyen-from-pexels"
+                class="card__img"
               />
               <div class="card__content">
-                <p class="card__title">Tunnel with morning light</p>
+                <h2 class="card__title">Tunnel with morning light</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt=""
+                alt="6-photo-by-moritz-feldmann-from-pexels"
                 class="card-img"
               />
               <div class="card__content">
-                <p class="card__title">Mountain house</p>
+                <h2 class="card__title">Mountain house</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
