--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             class="profile__avatar"
           />
           <div class="profile__column">
-            <h1 class="profile__name">
+            <h2 class="profile__name">
               Bessie Coleman Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu
               Badara Akon
-            </h1>
+            </h2>
             <p class="profile__description">
               Civil Aviator Known mononymously as Akon (/ˈeɪkɒn/), is a
               Senegalese-American singer, record producer, and entrepreneur. An
@@ -111,7 +111,7 @@
               <img
                 src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
                 alt="6-photo-by-moritz-feldmann-from-pexels"
-                class="card-img"
+                class="card__img"
               />
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
