--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/Spots.svg" alt="Sports Logo" class="header__logo" />
+        <img src="./images/Logo.svg" alt="Sports Logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
