--- a/index.html
+++ b/index.html
@@ -125,5 +125,6 @@
         <p class="footer__content">2023 © Sports</p>
       </footer>
     </div>
+    <script defer src="./scripts/index.js"></script>
   </body>
 </html>
