--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 id="description"
                 type="text"
                 class="modal__input"
-                placeholder="Name"
+                placeholder="Type your name"
               />
             </label>
             <label for="description" class="modal__label">
@@ -144,7 +144,7 @@
                 id="description"
                 type="text"
                 class="modal__input"
-                placeholder="Description"
+                placeholder="Describe yourself"
               />
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
