--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <footer class="footer">
         <p class="footer__content">2023 © Sports</p>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button type="submit" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -132,7 +132,7 @@
             <label for="name" class="modal__label">
               Name
               <input
-                id="description"
+                id="name"
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
