--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <div class="profile__column">
             <h2 class="profile__name">
               <span class="profile__name-first">Bessie Coleman</span
-              ><span class="hidden__text">
+              ><span class="profile__name-hidden-text">
                 Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon</span
               >
             </h2>
             <p class="profile__description">
               <span class="profile__description-first">Civil Aviator </span>
-              <span class="hidden__text">
+              <span class="profile__description-hidden-text">
                 mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American
                 singer, record producer, and entrepreneur. An influential figure
                 in modern world</span
@@ -72,9 +72,9 @@
       </footer>
       <div class="modal" id="edit-modal">
         <div class="modal__container">
-          <button type="submit" class="modal__close-btn"></button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
-          <form name="edit-profile" class="modal__form">
+          <form name="edit-profile" id="profile-form" class="modal__form">
             <label for="profil-name-input" class="modal__label">
               Name
               <input
