--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </div>
 
-      <div class="modal" id="preview-modal">
+      <div class="modal modal__preview" id="preview-modal">
         <div class="modal__container modal__container_preview">
           <button
             type="button"
