--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
+                required
+                minlength="2"
+                maxlength="40"
               />
             </label>
+            <span class="modal__error" id="profile-name-input-error"></span>
             <label for="profile-description-input" class="modal__label">
               Description
               <input
@@ -93,7 +97,14 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
+                required
+                minlength="2"
+                maxlength="200"
               />
+              <span
+                class="modal__error"
+                id="profile-description-input-error"
+              ></span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -112,7 +123,9 @@
                 type="url"
                 class="modal__input"
                 placeholder="Paste image link"
+                required
               />
+              <span class="modal__error" id="profile-image-link-error"></span>
             </label>
             <label for="profile-caption-input" class="modal__label">
               Caption
@@ -121,7 +134,14 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
+                required
+                minlength="2"
+                maxlength="30"
               />
+              <span
+                class="modal__error"
+                id="profile-caption-input-error"
+              ></span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -145,5 +165,6 @@
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/validation.js"></script>
   </body>
 </html>
