--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
-          <form name="edit-profile" id="profile-form" class="modal__form">
+          <form
+            name="edit-profile"
+            id="profile-form"
+            class="modal__form"
+            novalidate
+          >
             <label for="profile-name-input" class="modal__label">
               Name
               <input
@@ -115,7 +120,12 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
-          <form name="add-card-form" id="add-card-form" class="modal__form">
+          <form
+            name="add-card-form"
+            id="add-card-form"
+            class="modal__form"
+            novalidate
+          >
             <label for="profile-image-link" class="modal__label">
               Image link
               <input
