--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <title>Sports</title>
+    <title>Spots</title>
   </head>
   <body>
     <div class="page">
@@ -69,7 +69,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer__content">2023 © Sports</p>
+        <p class="footer__content">2023 © Spots</p>
       </footer>
 
       <div class="modal" id="edit-modal">
