--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,21 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="<%=require('./images/avatar.jpg')%>"
-            alt="Bessie Coleman"
-            class="profile__avatar"
-          />
+          <div class="profile__avatar-container">
+            <img
+              src="<%=require('./images/avatar.jpg')%>"
+              alt="Bessie Coleman"
+              class="profile__avatar"
+            />
+          </div>
+          <button type="button" class="profile__avatar-edit">
+            <img
+              src="<%=require('./images/white_pen.svg')%>"
+              alt="Edit avatar"
+              class="profile__avatar-edit-img"
+            />
+            Edit Avatar
+          </button>
           <div class="profile__column">
             <h2 class="profile__name">
               <span class="profile__name-first">Bessie Coleman</span>
@@ -79,6 +89,7 @@
       <footer class="footer">
         <p class="footer__content">2025 © Spots</p>
       </footer>
+
       <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
@@ -113,65 +124,57 @@
                 minlength="2"
                 maxlength="200"
               />
-              <span
-                class="modal__error"
-                id="profile-description-input-error"
-              ></span>
             </label>
+            <span
+              class="modal__error"
+              id="profile-description-input-error"
+            ></span>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
       </div>
-      <div class="modal" id="add-card-modal">
+
+      <div class="modal" id="edit-avatar-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
-          <h2 class="modal__title">New post</h2>
+          <h2 class="modal__title">Change profile picture</h2>
           <form
-            name="add-card-form"
-            id="add-card-form"
+            name="edit-avatar-form"
+            id="edit-avatar-form"
             class="modal__form"
             novalidate
           >
-            <label for="profile-image-link" class="modal__label">
+            <label for="avatar-url-input" class="modal__label">
               Image link
               <input
-                id="profile-image-link"
+                id="avatar-url-input"
                 type="url"
                 class="modal__input"
                 placeholder="Paste image link"
                 required
               />
-              <span class="modal__error" id="profile-image-link-error"></span>
             </label>
-            <label for="profile-caption-input" class="modal__label">
-              Caption
-              <input
-                id="profile-caption-input"
-                type="text"
-                class="modal__input"
-                placeholder="Type your caption"
-                required
-                minlength="2"
-                maxlength="30"
-              />
-              <span
-                class="modal__error"
-                id="profile-caption-input-error"
-              ></span>
-            </label>
+            <span class="modal__error" id="avatar-url-input-error"></span>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
       </div>
-      <div class="modal" id="preview-modal">
-        <div class="modal__container modal__container_preview">
-          <button
-            type="button"
-            class="modal__close-btn modal__close-btn_preview"
-            aria-label="close modal"
-          ></button>
-          <img class="modal__image modal__image_preview" alt="Preview Image" />
-          <p class="modal__caption modal__caption_preview">Caption</p>
+      <div class="modal" id="delete-card-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+          <h2 class="modal__title">
+            Are you sure you want to delete this image?
+          </h2>
+          <div class="modal__buttons">
+            <button
+              type="submit"
+              class="modal__submit-btn-delete"
+              id="confirm-delete-btn"
+            >
+              Delete
+            </button>
+            <button type="button" class="modal__cancel-btn">Cancel</button>
+          </div>
         </div>
       </div>
     </div>
