--- a/src/index.html
+++ b/src/index.html
@@ -133,11 +133,50 @@
           </form>
         </div>
       </div>
+      <div class="modal" id="add-card-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+          <h2 class="modal__title">Add a new post</h2>
+          <form
+            name="add-card-form"
+            id="add-card-form"
+            class="modal__form"
+            novalidate
+          >
+            <label for="profile-image-link" class="modal__label">
+              Image link
+              <input
+                id="profile-image-link"
+                type="url"
+                class="modal__input"
+                placeholder="Paste image link"
+                required
+              />
+            </label>
+            <span class="modal__error" id="profile-image-link-error"></span>
 
+            <label for="profile-caption-input" class="modal__label">
+              Caption
+              <input
+                id="profile-caption-input"
+                type="text"
+                class="modal__input"
+                placeholder="Write a caption"
+                required
+                minlength="2"
+                maxlength="200"
+              />
+            </label>
+            <span class="modal__error" id="profile-caption-input-error"></span>
+
+            <button type="submit" class="modal__submit-btn">Post</button>
+          </form>
+        </div>
+      </div>
       <div class="modal" id="edit-avatar-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
-          <h2 class="modal__title">Change profile picture</h2>
+          <h2 class="modal__title">Edit profile avatar</h2>
           <form
             name="edit-avatar-form"
             id="edit-avatar-form"
@@ -145,7 +184,7 @@
             novalidate
           >
             <label for="avatar-url-input" class="modal__label">
-              Image link
+              Profile Picture
               <input
                 id="avatar-url-input"
                 type="url"
@@ -160,9 +199,10 @@
         </div>
       </div>
       <div class="modal" id="delete-card-modal">
+        <button type="button" class="modal__close-btn-delete"></button>
+
         <div class="modal__container">
-          <button type="button" class="modal__close-btn"></button>
-          <h2 class="modal__title">
+          <h2 class="modal__title-delete">
             Are you sure you want to delete this image?
           </h2>
           <div class="modal__buttons">
@@ -173,7 +213,7 @@
             >
               Delete
             </button>
-            <button type="button" class="modal__cancel-btn">Cancel</button>
+            <button type="button" class="modal__cancel-delete">Cancel</button>
           </div>
         </div>
       </div>
