--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
               class="modal__error"
               id="profile-description-input-error"
             ></span>
-            </label>
+
             <span
               class="modal__error"
               id="profile-description-input-error"
@@ -139,7 +139,7 @@
         </div>
       </div>
 
-      <div class="modal" id="edit-avatar-modal">
+      <div class="modal" id="add-card-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Add a new post</h2>
