--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,17 @@
           </form>
         </div>
       </div>
-
+      <div class="modal" id="preview-modal">
+        <div class="modal__container modal__container_preview">
+          <button
+            type="button"
+            class="modal__close-btn modal__close-btn_preview"
+            aria-label="close modal"
+          ></button>
+          <img class="modal__image modal__image_preview" alt="Preview Image" />
+          <p class="modal__caption modal__caption_preview">Caption</p>
+        </div>
+      </div>
       <div class="modal" id="add-card-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
