final edit on modals html and index js

--- a/src/index.html
+++ b/src/index.html
@@ -154,15 +154,15 @@
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Add a new post</h2>
           <form
-            name="edit-avatar-form"
-            id="edit-avatar-form"
+            name="add-card-form"
+            id="add-card-form"
             class="modal__form"
             novalidate
           >
-            <label for="avatar-url-input" class="modal__label">
+            <label for="card-image-url-input" class="modal__label">
               Image link
               <input
-                id="avatar-url-input"
+                id="card-image-url-input"
                 type="url"
                 class="modal__input"
                 placeholder="Paste image link"
@@ -202,7 +202,7 @@
             <label for="avatar-url-input" class="modal__label">
               Profile Picture
               <input
-                id="avatar-url-input"
+                id="avatar-image-url-input"
                 type="url"
                 class="modal__input"
                 placeholder="Paste image link"
