--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
             class="modal__form"
             novalidate
           >
-            <label for="profile-name-input" class="modal__label">
+            <label class="modal__label">
               Name
               <input
                 id="profile-name-input"
@@ -169,8 +169,7 @@
                 required
               />
             </label>
-            <span class="modal__error" id="profile-image-link-error"></span>
-
+            <span class="modal__error" id="card-image-url-input-error"></span>
             <label for="profile-caption-input" class="modal__label">
               Caption
               <input
@@ -189,9 +188,13 @@
           </form>
         </div>
       </div>
-      <div class="modal" id="edit-avatar-modal">
+      <div class="modal modal_opened" id="edit-avatar-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn"></button>
+          <button
+            type="button"
+            class="modal__close-btn"
+            aria-label="Close modal"
+          ></button>
           <h2 class="modal__title">Edit profile avatar</h2>
           <form
             name="edit-avatar-form"
@@ -199,7 +202,7 @@
             class="modal__form"
             novalidate
           >
-            <label for="avatar-url-input" class="modal__label">
+            <label for="avatar-image-url-input" class="modal__label">
               Profile Picture
               <input
                 id="avatar-image-url-input"
@@ -209,7 +212,7 @@
                 required
               />
             </label>
-            <span class="modal__error" id="avatar-url-input-error"></span>
+            <span class="modal__error" id="avatar-image-url-input-error"></span>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
