Modal fix render card fix

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_opened" id="edit-avatar-modal">
+      <div class="modal" id="edit-avatar-modal">
         <div class="modal__container">
           <button
             type="button"
