--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,10 @@
                 <button class="card__delete-button" type="button"></button>
                 <div class="card__content">
                   <h2 class="card__title"></h2>
-                  <button type="button" class="card__like-button"></button>
+                  <div class="card__like-container">
+                    <button type="button" class="card__like-button"></button>
+                    <span class="card__like-counter">0</span>
+                  </div>
                 </div>
               </li>
             </template>
