modal edit code refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
               />
             </label>
             <span class="modal__error" id="profile-name-input-error"></span>
-            <label for="profile-description-input" class="modal__label">
+            <label class="modal__label">
               Description
               <input
                 id="profile-description-input"
